2017-04-19  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:
	
	(Dataset.add_gran_to_data):

	- Always load contents
	- Fix bug when too many files are empty

	(NetCDFDataset._read):

	- When returning xarray dataset, subselect fields as required.
	Pseudo-fields still not supported.

	(HomemadeDataset._read):

	- Make sure we delegate the .read(...) method fields argument.


2017-04-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/tests, typhon/math/tests/test_math.py:

	Added tests for most common math functions.

2017-04-18  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/arts/internals.py: Added and moved internal classes over
	
	* typhon/arts/utils.py: Moved as_quantumnumbers here
	
	* typhon/arts/catalogues.py: Removed ARTSCAT5, PartitionFunctions,
	LineMixing, PressureBroadening, Rational and all imports not related
	to these
	
	* {typhon/arts/types.py,doc/typhon.arts.rst}: mimics catalogues for 
	internals.py classes

2017-04-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/conf.py: Added numpy yo list of interpshinx packages.

	Intersphinx now links to the Python 3.6 documentation.

	* typhon/math/common.py (integrate_column):

	Improved documentation of input parameters. Added an example to
	the docstring.

2017-04-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/common.py:

	* (integrate_column): Use `np.trapz` for integration.

	This allows more flexible usage of the function (e.g.
	multidimensional input).

	* (interpolate_halflayers):

	Function to return linear interpolated values for halflayers.

	* typhon/atmosphere.py (iwv): Support multidimensional input.

	* typhon/tests/test_atmosphere.py:

	Added a test for mutlidimensional input to `atmosphere.iwv()`.

	* doc/typhon.math.rst: Added `interpolate_halfleves`.

	* doc/typhon.utils.rst: Removed `print_timing`.

2017-04-12  Oliver Lemke  <olemke@core-dump.info>

	* typhon/atmosphere.py (relative_humidity): Test successful.
